# filemanagement_storage_service

./: OAT.xml  README.md  ohos.build
services/storage_daemon/: BUILD.gn  main.cpp  storage_daemon.cfg  storage_daemon.rc
services/storage_daemon/crypto/src/: base_key.cpp  huks_master.cpp  key_manager.cpp
services/storage_daemon/include/disk/: disk_info.h  disk_manager.h
services/storage_daemon/include/fs/: exfat.h  ntfs.h  vfat.h
services/storage_daemon/include/ipc/: istorage_daemon.h  storage_daemon.h  storage_daemon_proxy.h  storage_daemon_stub.h  storage_damon.h  storage_damon_proxy.h  storage_damon_stub.h
services/storage_daemon/include/netlink/: netlink_data.h  netlink_handler.h  netlink_listener.h  netlink_manager.h
services/storage_daemon/include/user/: user_info.h  user_manager.h
services/storage_daemon/include/utils/: errno.h  file_utils.h  log.h  nocopyable.h  string_utils.h  user_path.h
services/storage_daemon/include/volume/: external_volume_info.h  volume_info.h  volume_manager.h
services/storage_daemon/ipc/src/: storage_daemon.cpp  storage_daemon_proxy.cpp  storage_daemon_stub.cpp  storage_damon.cpp  storage_damon_proxy.cpp  storage_damon_stub.cpp
services/storage_daemon/netlink/test/: BUILD.gn  netlink_manager_test.cpp
services/storage_daemon/user/src/: user_manager.cpp
services/storage_daemon/user/test/: BUILD.gn
services/storage_daemon/user/test/unittest/: user_manager_test.cpp
services/storage_daemon/utils/: file_utils.cpp  string_utils.cpp  user_path.cpp
services/storage_daemon/utils/test/: BUILD.gn  storage_radar_test.cpp
(+26 files in other folders)
